# optical-netconf-roadm-sim

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
docker/: Dockerfile  bench_netconf.py  demo_netconf.py  entrypoint.sh
docs/: debugging-notes.md  demo-transcript.txt
docs/experiments/: ber_vs_osnr.csv
idl/: onsim_dds.idl
include/onsim/: hal.h  roadm.hpp  transponder.hpp  wavelength_grid.hpp
netconf/: dds_bus.hpp  onsim_devd.cpp  onsim_netconfd.cpp  telemetry_dds.hpp  telemetry_pub.hpp
proto/: onsim_telemetry.proto
src/: hal.cpp  roadm.cpp  transponder.cpp
tests/: test_hal.cpp  test_roadm.cpp  test_transponder.cpp
tools/: ber_sweep.cpp  dds_sub.cpp  plot_ber_sweep.py  telemetry_sub.py
yang/: onsim-device.yang
